# code-that-counts

./: .gitignore  README.md  book.toml
.github/workflows/: ci.yml
counter/: Cargo.toml
counter/benches/: benchmarks.rs
counter/src/: basic.rs  ilp.rs  lib.rs
counter/src/simd/: basic.rs  ilp.rs  mod.rs  multiversion.rs  narrow.rs
counter/src/thread/: basic.rs  mod.rs  pool.rs  rayon.rs  scaling.rs  sync.rs
src/: SUMMARY.md  conclusion.md  getting-started.md  gpu.md  ilp.md  index.md  multithreading-custom.md  multithreading-os.md  multithreading-pool.md  multithreading-rayon.md  multithreading-scaling.md  multithreading-streaming.md  multithreading-sync.md  multithreading.md  simd-basics.md  simd-ilp.md  simd-narrowing.md  simd-portability.md  simd.md  vectorization.md
