[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
atomic = { version = "0.5", default-features = false }
atomic-wait = "1.0"
crossbeam-utils = "0.8"
hwloc2 = "2.2"
num-traits = "0.2"
pessimize = { git = "https://github.com/HadrienG2/pessimize.git", features = ["safe_arch"] }
rayon = "1.6"
safe_arch = "0.6"

[dev-dependencies]
criterion = { version = "0.4", default-features = false, features = ["rayon", "cargo_bench_support"] }
once_cell = "1.16"
quickcheck = "1"
quickcheck_macros = "1"
