[package]
name = "counter"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
atomic = { version = "0.6", default-features = false }
atomic-wait = "1.1"
bytemuck = "1.14.0"
crossbeam-utils = "0.8"
hwloc2 = "2.2"
num-traits = "0.2"
pessimize = { git = "https://github.com/HadrienG2/pessimize.git", features = ["safe_arch"] }
rayon = "1.8"
safe_arch = "0.7"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["rayon", "cargo_bench_support"] }
once_cell = "1.18"
proptest = "1.4"

[profile.test]
opt-level = 1

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
